--- a/mauiblazor/RecipeFriends/Components/Pages/RecipeView.razor
+++ b/mauiblazor/RecipeFriends/Components/Pages/RecipeView.razor
@@ -70,7 +70,7 @@
 
     private string imageDataURL = string.Empty;
 
-    private IList<byte[]> pages;
+    private IList<byte[]> pages = [];
 
     private int currentPageNumber = 1;
     private int NumberOfPages {get { return pages.Count();}}
