--- a/mauiblazor/RecipeFriends/Components/Pages/RecipeList.razor
+++ b/mauiblazor/RecipeFriends/Components/Pages/RecipeList.razor
@@ -238,6 +238,7 @@ else
 
     private async Task RefreshRecipes()
     {
-        recipes = await RecipeService.GetRecipesAsync(CancellationToken.None);
+        var orderedRecipes = (await RecipeService.GetRecipesAsync(CancellationToken.None)).OrderBy((x) => x.Title);
+        recipes = orderedRecipes.ToArray();
     }
 }
