--- a/mauiblazor/RecipeFriends/Components/ImageGallery/ImageGallery.razor
+++ b/mauiblazor/RecipeFriends/Components/ImageGallery/ImageGallery.razor
@@ -1,5 +1,5 @@
 ﻿@implements IDisposable
-
+@namespace RecipeFriends.Components.ImageGallery
 @using RecipeFriends.Components.FileDropZone
 @using NLog;
 
